<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Scrolllist"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E8F8FA">

        <TextView
            android:id="@+id/txt5"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/TXT5"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt4" />

        <TextView
            android:id="@+id/txt7"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/TXT7"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt6" />

        <TextView
            android:id="@+id/txt8"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/TXT8"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt7" />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/TXT1"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/TXT2"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt1" />

        <TextView
            android:id="@+id/txt3"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/TXT3"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt2" />

        <TextView
            android:id="@+id/txt4"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/TXT4"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt3" />

        <TextView
            android:id="@+id/txt9"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/TXT9"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt8" />

        <TextView
            android:id="@+id/txt10"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/TXT10"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt9"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/txt6"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/TXT6"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt5" />

        <TextView
            android:id="@+id/txt11"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/TXT11"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt10" />

        <TextView
            android:id="@+id/txt12"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/TXT12"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt11" />

        <TextView
            android:id="@+id/txt13"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/TXT13"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt12" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:background="@color/btnbasteha"
            android:text="@string/btnrezerv"
            android:textColor="@color/colortextbtn"
            app:layout_constraintEnd_toStartOf="@+id/txt2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn1"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:background="@color/btnbasteha"
            android:text="@string/btnrezerv"
            android:textColor="@color/colortextbtn"
            app:layout_constraintEnd_toStartOf="@+id/txt8"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn7"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn10"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:background="@color/btnbasteha"
            android:text="@string/btnrezerv"
            android:textColor="@color/colortextbtn"
            app:layout_constraintEnd_toStartOf="@+id/txt10"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn9"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:background="@color/btnbasteha"
            android:text="@string/btnrezerv"
            android:textColor="@color/colortextbtn"
            app:layout_constraintEnd_toStartOf="@+id/txt5"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn4"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn11"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:background="@color/btnbasteha"
            android:text="@string/btnrezerv"
            android:textColor="@color/colortextbtn"
            app:layout_constraintEnd_toStartOf="@+id/txt11"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn10"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@color/btnbasteha"
            android:text="@string/btnrezerv"
            android:textColor="@color/colortextbtn"
            app:layout_constraintEnd_toStartOf="@+id/txt1"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:background="@color/btnbasteha"
            android:text="@string/btnrezerv"
            android:textColor="@color/colortextbtn"
            app:layout_constraintEnd_toStartOf="@+id/txt4"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn3"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:background="@color/btnbasteha"
            android:text="@string/btnrezerv"
            android:textColor="@color/colortextbtn"
            app:layout_constraintEnd_toStartOf="@+id/txt6"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn5"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn13"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:background="@color/btnbasteha"
            android:text="@string/btnrezerv"
            android:textColor="@color/colortextbtn"
            app:layout_constraintEnd_toStartOf="@+id/txt13"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn12" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:background="@color/btnbasteha"
            android:text="@string/btnrezerv"
            android:textColor="@color/colortextbtn"
            app:layout_constraintEnd_toStartOf="@+id/txt9"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn8"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:background="@color/btnbasteha"
            android:text="@string/btnrezerv"
            android:textColor="@color/colortextbtn"
            app:layout_constraintEnd_toStartOf="@+id/txt7"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn6"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:background="@color/btnbasteha"
            android:text="@string/btnrezerv"
            android:textColor="@color/colortextbtn"
            app:layout_constraintEnd_toStartOf="@+id/txt3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn2"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn12"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:background="@color/btnbasteha"
            android:text="@string/btnrezerv"
            android:textColor="@color/colortextbtn"
            app:layout_constraintEnd_toStartOf="@+id/txt12"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn11"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

