<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/framelogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnsub"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@color/btndisable"
                android:shadowColor="#000000"
                android:text="@string/txtbtnsub"
                android:textColor="@color/btnsisabletextcolor"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="501dp"
                android:layout_height="121dp"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ssa"
                tools:ignore="ImageContrastCheck" />

            <EditText
                android:id="@+id/edtphone"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:layout_marginTop="76dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/txtphone"
                android:importantForAutofill="no"
                android:inputType="number|textPersonName"
                android:maxLength="11"
                android:shadowColor="#000000"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/txthint"
                app:layout_constraintBottom_toTopOf="@+id/edtphone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintVertical_bias="0.294" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/framecheck"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtrecphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <Button
                android:id="@+id/btnlog"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@color/btndisable"
                android:shadowColor="#000000"
                android:text="@string/txtbtnlogin"
                android:textColor="@color/btnsisabletextcolor"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="550dp"
                android:layout_height="121dp"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/screeeeen" />

            <EditText
                android:id="@+id/edtcheck"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:layout_marginTop="76dp"
                android:ems="10"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="number|textPersonName"
                android:maxLength="4"
                android:shadowColor="#000000"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameinfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtheader"
                android:layout_width="0dp"
                android:layout_height="68dp"
                android:background="@drawable/header"
                android:gravity="center_horizontal|center_vertical"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtshownet"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:background="@drawable/showbaste"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtheader" />

            <TextView
                android:id="@+id/txtshownet0"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:background="@drawable/showbaste0"
                android:gravity="center_horizontal|center_vertical"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtheader" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="0dp"
                android:layout_height="80dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/bgbuttonbaste" />

            <Button
                android:id="@+id/btnbaste"
                android:layout_width="64dp"
                android:layout_height="60dp"
                android:background="@drawable/btnbaste"
                app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="@+id/imageView5"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/txtrezervshow"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:background="@drawable/txtshowrezervbaste"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/txtrezerv"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <Button
                android:id="@+id/btnkharid"
                android:layout_width="177dp"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/btnkharidbaste"
                android:text="@string/btnkhbaste"
                android:textColor="@color/colortextbtn"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtrezervshow"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="300dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtheader" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>